Update college final year project.html

--- a/college final year project.html
+++ b/college final year project.html
@@ -66,6 +66,9 @@
             </h1>
             <div>
                 <p id="home-para">Will be filled after model completion</p>
+                <form action="">
+                    <button id="calculate"><span><a href="">CALCULATE LIFE EXPECTANCY</a></span></button>
+                </form>
             </div>
             <h1 class="heading"><span>ABOUT US</span></h1>
             <div class="timeline">
