--- a/college final year project.html
+++ b/college final year project.html
@@ -67,7 +67,8 @@
             <div>
                 <p id="home-para">Will be filled after model completion</p>
                 <form action="">
-                    <button id="calculate"><span><a href="">CALCULATE LIFE EXPECTANCY</a></span></button>
+                    <button id="calculate"><span><a href="calculator.html" target="_blank">CALCULATE LIFE
+                                EXPECTANCY</a></span></button>
                 </form>
             </div>
             <h1 class="heading"><span>ABOUT US</span></h1>
